--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -71,7 +71,7 @@ h2 {
      width: 90%;
 }
 .input-box input:focus {
-     border: 2px solid #336b89;
+     border: 2px solid #c2b280;
 }
 
 .input-box i {
