--- a/public/css/login.css
+++ b/public/css/login.css
@@ -66,7 +66,7 @@ h2 {
      width: 70%;
 }
 .input-box input:focus {
-     border-color: 2px solid #336b89;
+     border-color: 2px solid #c2b280;
 }
 
 .input-box i {
