--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -17,15 +17,7 @@ html {
      -o-background-size: cover;
      background-size: cover;
 }
-a:hover {
-     color: orange;
-}
-a {
-     color: white;
-     font-family: "Poppins";
-     font-size: 15px;
-     text-decoration: none;
-}
+
 .container {
      width: 50%;
 /*      height: 100%; */
@@ -46,13 +38,11 @@ h1 {
      font-size: 30px;
      color: white;
      text-align: center;
-     letter-spacing: 1px;
 }
 h2 {
      font-family: "Poppins";
      font-size: 16px;
      color: white;
-     letter-spacing: 1px;
      padding: 20px 0 7px 0;
 }
 option {
@@ -74,7 +64,7 @@ select {
      cursor: pointer;
 }
 select:focus {
-     border: 2px solid #336b89;
+     border: 2px solid #c2b280;
 }
 
 .input-box input {
@@ -88,7 +78,7 @@ select:focus {
      width: 70%;
 }
 .input-box input:focus {
-     border: 2px solid green;
+     border: 2px solid #c2b280;
 }
 
 .input-box i {
@@ -112,7 +102,6 @@ select:focus {
      text-align: center;
      font-family: "Open Sans";
      font-size: 18px;
-     letter-spacing: 1px;
 }
 
 
