--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -42,6 +42,9 @@ select {
      font-size: 14px;
      cursor: pointer;
 }
+select:focus {
+     border: 2px solid #c2b280;
+}
 .container {
      width: 100%;
      /*height: 100vh;*/
