--- a/public/css/mtenant.css
+++ b/public/css/mtenant.css
@@ -40,14 +40,12 @@ h1 {
      font-size: 25px;
      color: white;
      text-align: center;
-     letter-spacing: 1px;
      padding: 5px;
 }
 h2 {
      font-family: "Poppins";
      font-size: 18px;
      color: white;
-     letter-spacing: 1px;
      padding: 7px 0px 7px 0px;
 }
 option {
@@ -79,7 +77,7 @@ select:focus {
      width: 100%;
 }
 .input-box input:focus {
-     border: 3px solid green;
+     border: 3px solid #c2b280;
 }
 
 .input-box i {
