--- a/public/css/tenant.css
+++ b/public/css/tenant.css
@@ -38,14 +38,12 @@ h1 {
      font-size: 30px;
      color: white;
      text-align: center;
-     letter-spacing: 1px;
      padding: 5px;
 }
 h2 {
      font-family: "Poppins";
      font-size: 18px;
      color: white;
-     letter-spacing: 1px;
      padding: 7px 0px 7px 0px;
 }
 option {
@@ -77,7 +75,7 @@ select:focus {
      width: 75%;
 }
 .input-box input:focus {
-     border: 3px solid green;
+     border: 3px solid #c2b280;
 }
 
 .input-box i {
@@ -101,7 +99,6 @@ select:focus {
      text-align: center;
      font-family: "Open Sans";
      font-size: 18px;
-     letter-spacing: 1px;
      margin-top: 50px;
      cursor: pointer;
 }
