--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -23,6 +23,9 @@ a {
     font-size: 13px;
     font-family: "Poppins";
 }
+a: hover{
+    color: orange;
+}
 .container {
      width: 50%;
 /*      height: 100%; */
