--- a/public/css/login.css
+++ b/public/css/login.css
@@ -82,6 +82,7 @@ h2 {
 #button {
      width: 40%;
      background-color: green;
+     cursor: pointer;
      color: white;
      padding: 5px;
      border: 3px solid white;
@@ -91,7 +92,5 @@ h2 {
      font-size: 18px;
 }
 
-#button:hover {
-     background-color: green;
-}
+
 
