--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -103,6 +103,7 @@ select:focus {
 #button {
      width: 40%;
      background-color: green;
+     cursor: pointer;
      color: white;
      padding: 4px 4px 7px 4px;
      border: 3px solid white;
