--- a/views/Owner.hbs
+++ b/views/Owner.hbs
@@ -31,7 +31,7 @@
      </head>
      <body>
           <div class="container">
-               <form action="/findAddress" method="POST">
+               <form action="/saveAddress" method="POST">
                     <h1 class="font-effect-outline">Details</h1>
                     <h2>State</h2>
                     <select name="state">
