--- a/public/css/mowner.css
+++ b/public/css/mowner.css
@@ -68,7 +68,7 @@ option {
 }
 select {
      background-color: black;
-     opacity: 0.8
+     opacity: 0.8;
      color: white;
      width: 85%;
      border-radius: 5px;
