--- a/views/Owner.hbs
+++ b/views/Owner.hbs
@@ -72,7 +72,7 @@
                          <i class="fas fa-phone-alt icon"></i>
                          <input
                               type="text"
-                              placeholder="number"
+                              placeholder="Number"
                               name="contactNumber"
                               pattern="[0-9]{10}"
                               maxlength="10"
