--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -1,128 +1,5 @@
-h1 {
-     font-size: 20px;
-     width: 85vw;
-     background-color: black;
-     border-radius: 10px;
-     margin: auto;
-     padding: 10px;
-     color: white;
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     opacity: 0.8;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-50%) translateY(-500%);
-     animation: text 3s 1;
-}
-h2 {
-     font-size: 20px;
-     width: 85vw;
-     background-color: black;
-     border-radius: 10px;
-     margin: auto;
-     color: white;
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     position: absolute;
-     padding: 10px;
-     opacity: 0.8;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-50%) translateY(-300%);
-     animation: text 3s 1;
-}
-h3 {
-     font-size: 20px;
-     width: 85vw;
-     background-color: black;
-     border-radius: 10px;
-     margin: auto;
-     color: white;
-     opacity: 0.8;
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     position: absolute;
-     padding: 10px;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-50%) translateY(-100%);
-     animation: text 3s 1;
-}
-h4 {
-     font-size: 20px;
-     width: 85%;
-     background-color: black;
-     border-radius: 10px;
-     margin: auto;
-     opacity: 0.8;
-     color: white;
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     position: absolute;
-     padding: 10px;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-50%) translateY(+100%);
-     animation: text 3s 1;
-}
-@keyframes text {
-     0% {
-          color: black;
-     }
-     35% {
-          letter-spacing: 2px;
-     }
-     85% {
-          letter-spacing: 0px;
-     }
-}
-#button {
-     width: 45vw;
-     font-size: 20px;
-     font-weight: bold;
-     color: white;
-     height: 50px;
-     opacity: 0.8;
-     border-radius: 10px;
-     background-color: black;
-     text-align: center;
-     font-family: apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(1%) translateY(+370%);
-}
-#button1 {
-     width: 40vw;
-     font-size: 20px;
-     font-weight: bold;
-     color: white;
-     height: 50px;
-     opacity: 0.8;
-     border-radius: 10px;
-     background-color: black;
-     text-align: center;
-     font-family: apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-116%) translateY(+370%);
-}
-
-#button:hover {
-     background-color: green;
-     cursor: pointer;
-}
-#button1:hover {
-     background-color: green;
-     cursor: pointer;
+body {
+     margin: 0;
 }
 html {
      background: url(mBack.png) no-repeat center center fixed;
@@ -131,8 +8,74 @@ html {
      -o-background-size: cover;
      background-size: cover;
 }
-span {
-     color: orange;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+* {
+     box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+     border: 0;
+}
+
+.container {
+     width: 80%;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
+     padding: 20px 20px 30px 30px;
+     position: absolute;
+     right: 0;
+     margin: auto;
+     opacity: 0.8;
+}
+
+h1 {
+     font-family: "Open Sans";
+     font-size: 25px;
+     color: white;
+     text-align: center;
+     padding: 5px 0 25px 0;
+}
+h2 {
+     font-family: "Poppins";
+     font-size: 14px;
+     color: white;
+     padding: 7px 0px 7px 0px;
+}
+h3 {
+     font-family: "Poppins";
+     font-size: 14px;
+     color: rgb(209, 197, 28);
+     padding-bottom: 20px;
+}
+
+#button {
+     width: 35%;
+     background-color: green;
+     color: white;
+     padding: 2px;
+     border: 3px solid white;
+     border-radius: 4px;
+     text-align: center;
+     font-family: "Open Sans";
+     font-size: 16px;
+     margin-top: 30px;
+     cursor: pointer;
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translateX(-104%) translateY(350%);
+}
+#button1 {
+     width: 35%;
+     background-color: green;
+     color: white;
+     padding: 2px;
+     border: 3px solid white;
+     border-radius: 4px;
+     text-align: center;
+     font-family: "Open Sans";
+     font-size: 16px;
+     margin-top: 30px;
+     cursor: pointer;
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translateX(10%) translateY(350%);
 }
