--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -33,7 +33,7 @@ h1 {
      font-size: 25px;
      color: white;
      text-align: center;
-     padding: 5px 0 25px 0;
+     padding: 5px 0 20px 0;
 }
 h2 {
      font-family: "Poppins";
@@ -56,6 +56,7 @@ h3 {
      border: 3px solid white;
      border-radius: 4px;
      text-align: center;
+     margin-top: 3px;
      font-family: "Open Sans";
      font-size: 16px;
      cursor: pointer;
@@ -70,6 +71,7 @@ h3 {
      text-align: center;
      font-family: "Open Sans";
      font-size: 16px;
+     margin-top: 3px;
      cursor: pointer;
      position: absolute;
      top: 50%;
