--- a/public/css/account.css
+++ b/public/css/account.css
@@ -25,7 +25,15 @@ html {
      margin: auto;
      opacity: 0.8;
 }
-
+.column {
+     float: left;
+     width: 50%;
+}
+.divide:after {
+     content: "";
+     display: table;
+     clear: both;
+}
 h1 {
      font-family: "Open Sans";
      font-size: 30px;
@@ -47,7 +55,7 @@ h3 {
 }
 
 #button {
-     width: 40%;
+     width: 70%;
      background-color: green;
      color: white;
      padding: 7px;
@@ -58,13 +66,9 @@ h3 {
      font-size: 18px;
      margin-top: 30px;
      cursor: pointer;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-104%) translateY(350%);
 }
 #button1 {
-     width: 40%;
+     width: 70%;
      background-color: green;
      color: white;
      padding: 7px;
@@ -75,8 +79,4 @@ h3 {
      font-size: 18px;
      margin-top: 30px;
      cursor: pointer;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(10%) translateY(350%);
 }
