--- a/views/Account.hbs
+++ b/views/Account.hbs
@@ -41,7 +41,7 @@
                <h2>Mobile Number</h2>
                <h3>{{phoneNumber}}</h3>
                <div class="divide">
-                    <div class="column">
+                    <div class="column left">
                          <form action="/getAddress" method="GET">
                               <input
                                    type="submit"
@@ -50,7 +50,7 @@
                               />
                          </form>
                     </div>
-                    <div class="column">
+                    <div class="column right">
                          <form action="/changePassword" method="GET">
                               <input
                                    type="submit"
