--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -35,6 +35,7 @@ html {
 }
 .right {
      width: 60%;
+     padding-left: 10px;
 }
 .divide:after {
      content: "";
@@ -62,7 +63,7 @@ h3 {
 }
 
 #button {
-     width: 90%;
+     width: 95%;
      background-color: green;
      color: white;
      padding: 2px;
