--- a/public/css/maddress.css
+++ b/public/css/maddress.css
@@ -18,10 +18,15 @@ html {
 .container {
      width: 100%;
      background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
-     padding: 30px 30px 30px 60px;
+     padding: 20px 20px 30px 30px;
+     border-radius: 20px;
      position: absolute;
      margin: auto;
      opacity: 0.8;
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translateX(-50%) translateY(-50%);
 }
 
 h1 {
