--- a/views/changePassword.hbs
+++ b/views/changePassword.hbs
@@ -1,40 +1,111 @@
-<html>
-
-<head>
-    <title>Change Password</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/login.css">
-    <link rel="icon" href="icon.png" type="image/png">
-    <script src="/js/changePassword.js"></script>
-</head>
-
-<body>
-    <form action="/newPassword" method="POST">
-        <div class="form-box">
-            <h1>Change Password</h1>
-
-            <div class="input-box">
-                <i class="fa fa-envelope" style="color:orange;"></i>
-                <input type="password" placeholder="Current password" name="currentPassword" id="currentPassword"
-                    minlength="6" required>
-                <span class="eye1" onclick="myFunction1()">
-                    <i id="hide1" class="fa fa-eye" style="color:orange;"></i>
-                    <i id="hide2" class="fa fa-eye-slash" style="color:orange;"></i>
-                </span>
-            </div>
-            <div class="input-box">
-                <i class="fa fa-key" style="color:orange;"></i>
-                <input type="password" placeholder="New password" id="newPassword" name="newPassword" minlength="6"
-                    required>
-                <span class="eye2" onclick="myFunction2()">
-                    <i id="hide3" class="fa fa-eye" style="color:orange;"></i>
-                    <i id="hide4" class="fa fa-eye-slash" style="color:orange;"></i>
-                </span>
-            </div>
-            <input type="submit" value="Change" id="button" />
-    </form>
-    </div>
-
-</body>
-
+<!DOCTYPE html>
+<html lang="en">
+     <head>
+          <meta charset="UTF-8" />
+          <meta
+               name="viewport"
+               content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
+          />
+          <title>Change Password</title>
+          <link
+               rel="stylesheet"
+               href="https://fonts.googleapis.com/css?family=Poppins|Goldman|karla|Open+Sans&effect=anaglyph|shadow-multiple|outline|neon|fire"
+          />
+          <link
+               rel="stylesheet"
+               href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+          />
+          <link rel="icon" href="icon.png" type="image/png" />
+          <script src="/js/login.js"></script>
+          <link
+               rel="stylesheet"
+               media="screen and (min-width: 500px)"
+               type="text/css"
+               href="/css/login.css"
+          />
+          <link
+               rel="stylesheet"
+               media="screen and (max-width: 499px)"
+               type="text/css"
+               href="/css/mlogin.css"
+          />
+     </head>
+     <body>
+          <div class="container">
+               <div class="login-box">
+                    <form action="/newPassword" method="POST">
+                         <h1 class="font-effect-outline">Change Password</h1>
+                         <br />
+                         <div class="input-box">
+                              <h2>Current Password</h2>
+                              <i class="fa fa-lock icon"></i>
+                              <input
+                                   type="password"
+                                   placeholder="Current password"
+                                   name="currentPassword"
+                                   id="currentPassword"
+                                   minlength="6"
+                                   required
+                              />
+                              <span class="eye" onclick="myFunction1()">
+                                   <i
+                                        id="hide1"
+                                        class="far fa-eye"
+                                        style="
+                                             color: white;
+                                             padding-left: 5px;
+                                             padding-top: 5px;
+                                        "
+                                   ></i>
+                                   <i
+                                        id="hide2"
+                                        class="fa fa-eye-slash"
+                                        style="
+                                             color: white;
+                                             padding-left: 5px;
+                                             padding-top: 5px;
+                                        "
+                                   ></i>
+                              </span>
+                              <h2>New Password</h2>
+                              <i class="fa fa-lock icon"></i>
+                              <input
+                                   type="password"
+                                   placeholder="New password"
+                                   id="newPassword"
+                                   name="newPassword"
+                                   minlength="6"
+                                   required
+                              />
+                              <span class="eye" onclick="myFunction2()">
+                                   <i
+                                        id="hide1"
+                                        class="far fa-eye"
+                                        style="
+                                             color: white;
+                                             padding-left: 5px;
+                                             padding-top: 5px;
+                                        "
+                                   ></i>
+                                   <i
+                                        id="hide2"
+                                        class="fa fa-eye-slash"
+                                        style="
+                                             color: white;
+                                             padding-left: 5px;
+                                             padding-top: 5px;
+                                        "
+                                   ></i>
+                              </span>
+                              <br /><br /><br />
+                              <input
+                                   type="submit"
+                                   value="Change Password"
+                                   id="button"
+                              />
+                         </div>
+                    </form>
+               </div>
+          </div>
+     </body>
 </html>
