--- a/views/changePassword.hbs
+++ b/views/changePassword.hbs
@@ -16,7 +16,7 @@
                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
           />
           <link rel="icon" href="icon.png" type="image/png" />
-          <script src="/js/login.js"></script>
+          <script src="/js/changePassword.js"></script>
           <link
                rel="stylesheet"
                media="screen and (min-width: 500px)"
