--- a/public/css/account.css
+++ b/public/css/account.css
@@ -37,7 +37,7 @@ html {
 h1 {
      font-family: "Open Sans";
      font-size: 30px;
-     color: white;
+     color: black;
      text-align: center;
      padding: 5px 0 25px 0;
 }
