--- a/public/css/address.css
+++ b/public/css/address.css
@@ -29,7 +29,7 @@ html {
 h1 {
      font-family: "Open Sans";
      font-size: 30px;
-     color: white;
+     color: black;
      text-align: center;
      padding: 5px 0 15px 0;
 }
