--- a/public/css/login.css
+++ b/public/css/login.css
@@ -44,7 +44,7 @@ html {
 h1 {
      font-family: "Open Sans";
      font-size: 30px;
-     color: white;
+     color: black;
      text-align: center;
 }
 h2 {
