--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -45,7 +45,7 @@ html {
 h1 {
      font-family: "Open Sans";
      font-size: 25px;
-     color: white;
+     color: black;
      text-align: center;
      padding: 5px 0 20px 0;
 }
