--- a/public/css/maddress.css
+++ b/public/css/maddress.css
@@ -30,9 +30,9 @@ html {
 }
 
 h1 {
-     font-family: "Open Sans";
+     font-family: "Goldman";
      font-size: 25px;
-     color: white;
+     color: black;
      text-align: center;
      padding: 5px 0 15px 0;
 }
