--- a/public/css/account.css
+++ b/public/css/account.css
@@ -35,7 +35,7 @@ html {
      clear: both;
 }
 h1 {
-     font-family: "Open Sans";
+     font-family: "Goldman";
      font-size: 30px;
      color: black;
      text-align: center;
