--- a/public/css/login.css
+++ b/public/css/login.css
@@ -42,7 +42,7 @@ html {
 }
 
 h1 {
-     font-family: "Open Sans";
+     font-family: "Goldman";
      font-size: 30px;
      color: black;
      text-align: center;
