--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -43,7 +43,7 @@ html {
      clear: both;
 }
 h1 {
-     font-family: "Open Sans";
+     font-family: "Goldman";
      font-size: 25px;
      color: black;
      text-align: center;
