--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -47,7 +47,7 @@ html {
 }
 
 h1 {
-     font-family:"Open Sans";
+     font-family:"Goldman";
      font-size: 25px;
      color: black;
      text-align: center;
