--- a/public/css/mowner.css
+++ b/public/css/mowner.css
@@ -44,9 +44,9 @@ a {
      clear: both;
 }
 h1 {
-     font-family: "Open Sans";
+     font-family: "Goldman";
      font-size: 25px;
-     color: white;
+     color: black;
      text-align: center;
      padding: 5px;
 }
