--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -59,9 +59,9 @@ select:focus {
 }
 
 h1 {
-     font-family: "Open Sans";
+     font-family: "Goldman";
      font-size: 25px;
-     color: white;
+     color: black;
      text-align: center;
 }
 h2 {
