--- a/public/css/mtenant.css
+++ b/public/css/mtenant.css
@@ -36,9 +36,9 @@ a {
      opacity: 0.8;
 }
 h1 {
-     font-family: "Open Sans";
+     font-family: "Goldman";
      font-size: 25px;
-     color: white;
+     color: black;
      text-align: center;
      padding: 5px;
 }
