--- a/public/css/owner.css
+++ b/public/css/owner.css
@@ -42,9 +42,9 @@ a {
      clear: both;
 }
 h1 {
-     font-family: "Open Sans";
+     font-family: "Goldman";
      font-size: 30px;
-     color: white;
+     color: black;
      text-align: center;
      padding: 5px;
 }
