--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -42,9 +42,9 @@ a:hover {
      transform: translateY(0%);
 }
 h1 {
-     font-family: "Open Sans";
+     font-family: "Goldman";
      font-size: 30px;
-     color: white;
+     color: black;
      text-align: center;
 }
 h2 {
