--- a/public/css/tenant.css
+++ b/public/css/tenant.css
@@ -34,9 +34,9 @@ a {
      opacity: 0.8;
 }
 h1 {
-     font-family: "Open Sans";
+     font-family: "Goldman";
      font-size: 30px;
-     color: white;
+     color: black;
      text-align: center;
      padding: 5px;
 }
