--- a/views/Account.hbs
+++ b/views/Account.hbs
@@ -9,7 +9,7 @@
           <title>Account Details</title>
           <link
                rel="stylesheet"
-               href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins&effect=outline|anaglyph"
+               href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins|Goldman&effect=outline|anaglyph|shadow-multiple"
           />
           <link
                rel="stylesheet"
