--- a/views/Owner.hbs
+++ b/views/Owner.hbs
@@ -9,7 +9,7 @@
           <title>Owner</title>
           <link
                rel="stylesheet"
-               href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins&effect=outline|anaglyph"
+               href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins|Goldman&effect=outline|anaglyph|shadow-multiple"
           />
           <link
                rel="stylesheet"
@@ -32,7 +32,7 @@
      <body>
           <div class="container">
                <form action="/saveAddress" method="POST">
-                    <h1 class="font-effect-outline">Details</h1>
+                    <h1 class="font-effect-shadow-multiple">Details</h1>
                     <h2>State</h2>
                     <select name="state">
                          <option>Telangana</option>
