--- a/views/Account.hbs
+++ b/views/Account.hbs
@@ -31,7 +31,7 @@
      </head>
      <body>
           <div class="container">
-               <h1 class="font-effect-outline">Account</h1>
+               <h1 class="font-effect-shadow-multiple">Account</h1>
                <h2>Email</h2>
                <h3>{{email}}</h3>
                <h2>First Name</h2>
