--- a/views/Tenant.hbs
+++ b/views/Tenant.hbs
@@ -9,7 +9,7 @@
           <title>Tenant</title>
           <link
                rel="stylesheet"
-               href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins&effect=outline|anaglyph"
+               href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins|Goldman&effect=outline|anaglyph|shadow-multiple"
           />
           <link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/tenant.css">
           <link rel="stylesheet" media="screen and (max-width: 499px)" type="text/css" href="/css/mtenant.css">
@@ -18,7 +18,7 @@
      <body>
           <div class="container">
              <form action="/findAddress" method="POST">
-               <h1 class="font-effect-outline">Details</h1>
+               <h1 class="font-effect-shadow-multiple">Details</h1>
                <h2>State</h2>
                <select name="state">
                         <option>Telangana</option>
