--- a/views/address.hbs
+++ b/views/address.hbs
@@ -9,7 +9,7 @@
           <title>My Address</title>
           <link
                rel="stylesheet"
-               href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins&effect=outline|anaglyph"
+               href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins|Goldman&effect=outline|anaglyph|shadow-multiple"
           />
           <link
                rel="stylesheet"
@@ -31,7 +31,7 @@
      </head>
      <body>
           <div class="container">
-               <h1 class="font-effect-outline">Address</h1>
+               <h1 class="font-effect-shadow-multiple">Address</h1>
                <h2>State</h2>
                <h3>{{state}}</h3>
                <h2>District</h2>
