--- a/views/changePassword.hbs
+++ b/views/changePassword.hbs
@@ -34,7 +34,7 @@
           <div class="container">
                <div class="login-box">
                     <form action="/newPassword" method="POST">
-                         <h1 class="font-effect-outline">Change Password</h1>
+                         <h1 class="font-effect-shadow-multiple">Change Password</h1>
                          <br />
                          <div class="input-box">
                               <h2>Current Password</h2>
