--- a/public/css/mstatus.css
+++ b/public/css/mstatus.css
@@ -2,7 +2,7 @@ body {
      margin: 0;
 }
 html {
-     background: url(back.png) no-repeat center center fixed;
+     background: url(mBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
@@ -18,7 +18,6 @@ html {
 .container {
      width: 85%;
      padding: 20px 20px 30px 30px;
-     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
      border-radius: 20px;
      position: absolute;
      top: 50%;
@@ -31,7 +30,7 @@ html {
 h1 {
      font-family: "Goldman";
      width: 100%;
-     font-size: 30px;
+     font-size: 25px;
      color: black;
      text-align: center;
      padding: 5px 0 25px 0;
@@ -56,9 +55,9 @@ h1 {
      width: 40%;
      background-color: green;
      color: white;
-     padding: 7px;
+     padding: 2px;
      border: 3px solid white;
-     border-radius: 10px;
+     border-radius: 4px;
      text-align: center;
      font-family: "Open Sans";
      font-size: 18px;
