--- a/public/css/mstatus.css
+++ b/public/css/mstatus.css
@@ -17,7 +17,8 @@ html {
 
 .container {
      width: 85%;
-     padding: 20px 20px 30px 30px;
+     padding: 20px 0 30px 0;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
      border-radius: 20px;
      position: absolute;
      top: 50%;
@@ -34,10 +35,6 @@ h1 {
      color: black;
      text-align: center;
      padding: 5px 0 25px 0;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-50%) translateY(-150%);
      animation: text 3s infinite;
 }
 @keyframes text {
@@ -60,11 +57,7 @@ h1 {
      border-radius: 4px;
      text-align: center;
      font-family: "Open Sans";
-     font-size: 18px;
+     font-size: 16px;
      margin-top: 30px;
      cursor: pointer;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-50%) translateY(-50%);
 }
