--- a/public/css/mstatus.css
+++ b/public/css/mstatus.css
@@ -16,7 +16,7 @@ html {
 }
 
 .container {
-     width: 85%;
+     width: 90%;
      padding: 20px 0 30px 0;
      background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
      border-radius: 20px;
@@ -59,6 +59,6 @@ h1 {
      font-family: "Open Sans";
      font-size: 16px;
      margin-top: 30px;
-     margin: auto;
+     marging-left: 30px;
      cursor: pointer;
 }
