--- a/public/css/mstatus.css
+++ b/public/css/mstatus.css
@@ -59,6 +59,9 @@ h1 {
      font-family: "Open Sans";
      font-size: 16px;
      margin-top: 30px;
-     margin-left: 30px;
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translateX(-50%) translateY(-50%);
      cursor: pointer;
 }
