--- a/public/css/mstatus.css
+++ b/public/css/mstatus.css
@@ -59,9 +59,6 @@ h1 {
      font-family: "Open Sans";
      font-size: 16px;
      margin-top: 30px;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-50%) translateY(-50%);
+     margin-left: 50px;
      cursor: pointer;
 }
