--- a/public/css/mstatus.css
+++ b/public/css/mstatus.css
@@ -59,6 +59,6 @@ h1 {
      font-family: "Open Sans";
      font-size: 16px;
      margin-top: 25px;
-     margin-left: 60px;
+     margin-left: 15%;
      cursor: pointer;
 }
