--- a/public/css/mstatus.css
+++ b/public/css/mstatus.css
@@ -17,7 +17,7 @@ html {
 
 .container {
      width: 90%;
-     padding: 20px 0 30px 0;
+     padding: 20px 15px 30px 15px;
      background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
      border-radius: 20px;
      position: absolute;
