--- a/views/result.hbs
+++ b/views/result.hbs
@@ -46,13 +46,13 @@
                     The following shops are available with in the radius of 1km
                </h4>
                <div class="divide">
-                    <div class="column">
+                    <div class="column left">
                          <h5>Vegetable market:<span>{{veg}}</span></h5>
                          <h5>Milk booth:<span>{{milk}}</span></h5>
                          <h5>Hospital:<span>{{hospital}}</span></h5>
                          <h5>Bus stand:<span>{{bus}}</span></h5>
                     </div>
-                    <div class="column">
+                    <div class="column right">
                          <h5>Shopping mall:<span>{{shop}}</span></h5>
                          <h5>Grocery store:<span>{{grocery}}</span></h5>
                          <h5>Cinema hall:<span>{{cinema}}</span></h5>
