--- a/public/css/login.css
+++ b/public/css/login.css
@@ -46,12 +46,13 @@ h1 {
      font-size: 30px;
      color: black;
      text-align: center;
+     padding-bottom:10px;
 }
 h2 {
      font-family: "Poppins";
      font-size: 16px;
      color: white;
-     padding: 20px 0 7px 0;
+     padding: 10px 0 7px 0;
 }
 
 .input-box input {
