--- a/views/result.hbs
+++ b/views/result.hbs
@@ -55,6 +55,8 @@
                <h3>{{houseDescription}}</h3>
                <h2>What's app number</h2>
                <h3>{{contactNumber}}</h3>
+               <h2>Question</h2>
+               <h3>{{securityQuestion}}</h3>
                <h4>
                     The following shops are available with in the radius of 1 km
                </h4>
