--- a/public/css/mresetPassword.css
+++ b/public/css/mresetPassword.css
@@ -45,9 +45,10 @@ select:focus {
      border: 2px solid #c2b280;
 }
 .container {
-     width: 100%;
+     width: 85%;
      padding:  20px 20px 30px 30px;
      opacity: 0.8;
+     border-radius: 20px;
      background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
      margin: auto;
      position: absolute;
